# gaia-agent

./: .gitignore  README.md  agent.py  app.py  main.py  pyproject.toml  quick_test.py  requirements.txt  setup_check.py  test_agent.py  test_gaia_examples.py  workflow.py
config/: __init__.py  agent_config.py  api_config.py  logging_config.py  settings.py  tool_config.py
models/: __init__.py  questions.py  responses.py  tools.py
prompts/: __init__.py  system_prompts.py  templates.py  tool_prompts.py
tools/: __init__.py  calculator.py  code_execution.py  files.py  knowledge.py  registry.py  web_search.py
