[project]
name = "hf-agents-course-final-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "gradio>=3.36.1",
    "httpx>=0.28.1",
    "llama-index>=0.14.6",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-huggingface>=0.6.1",
    "llama-index-workflows>=2.8.3",
    "pillow>=12.0.0",
]
